--- a/src/pages/category/category.scss
+++ b/src/pages/category/category.scss
@@ -21,14 +21,27 @@ page-category {
     }
     @media screen and (min-width: 0px) {
         @media screen and (max-width: 321px){
-       
+            .theSearch{
+                width: 40px;
+            }
+            .theMenu{
+                position: absolute;
+                display: block;
+                float: left;
+            }
+            .category{
+                position: relative;
+                float: right;
+                display: block;
+                width: 230px;
+            }
             #scroll-content{
                 background: red;
-                margin-top: -70px;
+                // margin-top: -70px;
             }
             img{
-                height: 90px;
-                width: 90px;
+                height: 155px;
+                width: 155px;
                 border: 2px solid white;
             }
             .rot{
@@ -43,9 +56,23 @@ page-category {
     } 
     @media screen and (min-width: 322px) {
         @media screen and (max-width: 360px){
+            .theSearch{
+                width: 40px;
+            }
+            .theMenu{
+                position: absolute;
+                display: block;
+                float: left;
+            }
+            .category{
+                position: relative;
+                float: right;
+                display: block;
+                width: 265px;
+            }
             #scroll-content{
                 background: orange;
-                margin-top: -70px;
+                // margin-top: -70px;
             }
             img{
                 height: 175px;
@@ -61,37 +88,110 @@ page-category {
                 background: #222;
             }
         }
-    }     
-    @media screen and (min-width: 361px) {
+    }    
+    @media screen and (min-width: 374px){
+        @media screen and (max-width:376px){
+            @media screen and (max-height: 670px){
+                .theBody{
+                    background:#222;
+                }
+                .theSearch{
+                    width: 50px;
+                }
+                .theMenu{
+                    position: absolute;
+                    display: block;
+                    float: left;
+                }
+                .category{
+                    position: relative;
+                    float: right;
+                    display: block;
+                    width: 285px;
+                }
+                #scroll-content{
+                    background: orange;
+                    // margin-top: -70px;
+                }
+                img{
+                    height: 180px;
+                    width: 180px;
+                    border: 2px solid white;
+                }
+                .rot{
+                    width: 125vw;
+                    height: 30vh;
+                    transform: rotate(-20deg);
+                    margin-top: -120px;
+                    margin-left: -70px;
+                    background: #222;
+                }
+            }
+
+        }
+
+    } 
+    @media screen and (min-width: 411px) {
         @media screen and (max-width: 414px){
-            @media screen and (max-height: 732px){
-            #scroll-content{
-                background: green;
-                margin-top: -80px;
+            @media screen and (max-height: 737px){
+                .theBody{
+                    background: #222;
+                }
+                .theSearch{
+                    width: 50px;
+                }
+                .theMenu{
+                    position: absolute;
+                    display: block;
+                    float: left;
+                }
+                .category{
+                    position: relative;
+                    float: right;
+                    display: block;
+                    width: 320px;                    }
+                #scroll-content{
+                    background: green;
+                    // margin-top: -80px;
+                }
+                img{
+                    height: 200px;
+                    width: 200px;
+                    border: 2px solid white;
+                }
+                .rot{
+                    width: 125vw;
+                    height: 30vh;
+                    transform: rotate(-20deg);
+                    margin-top: -120px;
+                    margin-left: -70px;
+                    background: #222;
+                }
             }
-            img{
-                height: 180px;
-                width: 180px;
-                border: 2px solid white;
-            }
-            .rot{
-                width: 125vw;
-                height: 30vh;
-                transform: rotate(-20deg);
-                margin-top: -120px;
-                margin-left: -70px;
-                background: #222;
-            }
-            }
-            @media screen and (min-height: 740px){
-                @media screen and (max-height: 813px){
+            @media screen and (min-height: 820px){
+                @media screen and (max-height: 825px){
+                .theSearch{
+                    width: 40px;
+                }
+                .theMenu{
+                    position: absolute;
+                    display: block;
+                    float: left;
+                }
+                .category{
+                    position: relative;
+                    float: right;
+                    display: block;
+                    width: 320px;
+                }
+
                     #scroll-content{
                         background: #00d9ff;
-                        margin-top: -80px;
+                        // margin-top: -80px;
                     }
                     img{
-                        height: 100px;
-                        width: 100px;
+                        height: 200px;
+                        width: 200px;
                         border: 2px solid white;
                     }
                     .rot{
@@ -104,37 +204,73 @@ page-category {
                     }
                 }
             }
+            @media screen and (max-height: 815px){
+                @media screen and (min-height: 810px){
+                .theSearch{
+                    width: 40px;
+                }
+                .theMenu{
+                    position: absolute;
+                    display: block;
+                    float: left;
+                }
+                .category{
+                    position: relative;
+                    float: right;
+                    display: block;
+                    width: 300px;
+                }
+
+                    #scroll-content{
+                        background: #00d9ff;
+                        // margin-top: -80px;
+                    }
+                    img{
+                        height: 180px;
+                        width: 180px;
+                        border: 2px solid white;
+                    }
+                    .rot{
+                        width: 125vw;
+                        height: 30vh;
+                        transform: rotate(-20deg);
+                        margin-top: -170px;
+                        margin-left: -70px;
+                        background: #222;
+                    }
+                }
+
+            }
         }
     }
-    @media screen and (min-width:411px){
-        @media screen and (max-width:769px){
-            @media screen and (max-height: 739px){
-            #scroll-content{
-                background: rgb(255, 0, 234);
-                margin-top: -80px
-            }
-            img{
-                height: 200px;
-                width: 200px;
-                border: 2px solid white;
-            }
-            .rot{
-                width: 125vw;
-                height: 30vh;
-                transform: rotate(-20deg);
-                margin-top: -150px;
-                margin-left: -70px;
-                background: #222;
-            }
-            }
-        }
-    }
+    // @media screen and (min-width:411px){
+    //     @media screen and (max-width:420px){
+    //         #scroll-content{
+    //             background: rgb(255, 0, 234);
+    //             // margin-top: -80px
+    //         }
+
+    //         img{
+    //             height: 200px;
+    //             width: 200px;
+    //             border: 2px solid white;
+    //         }
+    //         .rot{
+    //             width: 125vw;
+    //             height: 30vh;
+    //             transform: rotate(-20deg);
+    //             margin-top: -150px;
+    //             margin-left: -70px;
+    //             background: #222;
+    //         }
+    //     }
+    // }
 
     @media screen and (min-width:770px){
         @media screen and (max-width:1025px){
             #scroll-content{
                 background: rgb(0, 0, 0);
-                margin-top: -130px;
+                // margin-top: -130px;
             }
             img{
                 height: 250px;
@@ -160,7 +296,7 @@ page-category {
             #scroll-content{
                 background: rgb(48, 48, 48);
                 text-align: center;
-                margin-top: -110px;
+                // margin-top: -110px;
             }
             img{
                 height: 220px;
@@ -179,6 +315,34 @@ page-category {
                 margin-top: -200px;
                 margin-left: -120px;
                 background: #222;
+            }
+        }
+    }
+
+
+    // Mxolisi's Device
+    @media screen and (min-width: 450px){
+        @media screen and (max-width: 500px){
+            .theBody{
+                text-align:center;
+                // background: red;
+            }
+            #scroll-content{
+                // background: rgb(48, 48, 48);
+                text-align: center;
+                // margin-top: -110px;
+            }
+            img{
+                height: 220px;
+                width: 230px;
+                border: 2px solid white;
+            }
+            ion-grid{
+                width: 100%;
+                max-width: 830px;
+            }
+            .mnu{
+                padding-top: 10px;
             }
         }
     }
